[package]
name = "lesson2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.5"
plotters = "0.3.7"
ndarray = "0.16.1"
matplotlib = "0.2.0"
# opencv = "0.93.5"
clap = { version = "4.5.21", features = ["derive"] }
rgb = "0.8.50"
itertools = "0.13.0"
rayon = "1.10.0"

